# iDescriptor

./: .gitmodules  CMakeLists.txt  README.md  resources.qrc
.github/workflows/: ci.yml
cmake/: win-deploy.cmake
src/: BackDrop.cpp  BackDrop.h  afcexplorerwidget.cpp  afcexplorerwidget.h  airplaywidget.cpp  airplaywidget.h  appcontext.cpp  appcontext.h  appdownloadbasedialog.h  appdownloaddialog.cpp  appdownloaddialog.h  appinstalldialog.cpp  appinstalldialog.h  appswidget.cpp  cableinfowidget.cpp  cableinfowidget.h  devdiskimagehelper.cpp  devdiskimagehelper.h  devdiskimageswidget.cpp  devdiskimageswidget.h  devdiskmanager.cpp  devdiskmanager.h  deviceinfowidget.cpp  devicemanagerwidget.cpp  devicemanagerwidget.h  devicemenuwidget.cpp  devicesidebarwidget.cpp  devicesidebarwidget.h  devicesleepwarningwidget.cpp  devicesleepwarningwidget.h  diskusagebar.cpp  diskusagewidget.cpp  exportalbum.cpp  exportalbum.h  exportmanager.cpp  exportmanager.h  exportmanagerthread.cpp  fileexplorerwidget.cpp  fileexplorerwidget.h  gallerywidget.cpp  (+44 more)
src/base/: tool.cpp  tool.h
src/core/services/: init_device.cpp  load_heic.cpp
src/core/services/avahi/: avahi_service.cpp
src/core/services/dnssd/: dnssd_service.cpp  dnssd_service.h
src/platform/macos/: macos.h  macos.mm
src/platform/windows/: win_common.h
src/rust/: Cargo.toml
src/rust/src/: hause_arrest.rs  lib.rs  service_manager.rs
